--- a/public/flame/flame.css
+++ b/public/flame/flame.css
@@ -1,4 +1,4 @@
-.theBall,
+/* .theBall,
 .theBall-outer {
     width: 20px;
     height: 20px;
@@ -31,7 +31,7 @@
     -ms-transform: scale(2);
     -o-transform: scale(2);
     transform: scale(2);
-}
+} */
 
 /*---------------------------------------------------------------------
                         Mouse Effect
