--- a/src/components/forms/dark-mode-switch/dark-mode-switch.css
+++ b/src/components/forms/dark-mode-switch/dark-mode-switch.css
@@ -22,6 +22,7 @@ label {
     border-radius: 180px;
     box-shadow: 0px 5px 10px rgba(0,0,0,0.2);
   }
+
   input {
     width: 0;
     height: 0;
@@ -72,4 +73,21 @@ label {
 
   input:checked + label svg.moon {
     fill:#fff;
+  }
+
+  @media only screen and (max-width: 600px) {
+    label {
+      width:70px;
+      height:35px;
+    }
+
+    label:after {
+      content: "";
+      width:35px;
+      height: 35px;
+    }
+
+    label:active:after{ 
+      width: 70px; 
+    }
   }
