--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -25,7 +25,8 @@ h3{
    min-height: 100vh; 
    margin: 0 auto;
    width: 80%;
-   /* background: RED; */
+
+   position: relative;
 }
 
 ::-webkit-scrollbar-thumb {
