--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -4,7 +4,6 @@
     position: fixed;
     top: 0;
     right: 0;
-    /* background-color: #000000; */
     display: flex;
     animation: animate-fade-top 0.7s ease-in-out ;
 }
@@ -23,12 +22,11 @@
 }
 
 .layout[data-dark=false] .homePage .profile-section {
-    /* box-shadow: inset 17px 35px 112px 100px #ffff;; */
-    box-shadow: inset 20px 35px 112px 90px #ffff;;
-    box-shadow: inset 105px 77px 202px 125px #ffff;;
-    box-shadow: inset 105px 44px 202px 125px #ffffff;;
     box-shadow: inset 98px 0px 171px 123px #ffff;;
-    
+}
+
+.layout[data-magicWand-active=true] .homePage .profile-section {
+    display: none;
 }
 
 .homePage .profile-content {
@@ -41,19 +39,6 @@
 .homePage .profile-content .box-wrapper {
     position: relative;
 }
-
-/* .homePage .profile-content .box-wrapper::after{
-    z-index: -1;
-    content: "";
-    width: 200px;
-    top: -40%;
-    right: 0;
-    transform: translateX(40%);
-    height: 350px;
-    border: 2px solid var(--warning);
-    position: absolute;
-
-} */
 
 .homePage .profile-content .titel {
     position: relative;
@@ -138,13 +123,10 @@
     }
 
     .homePage .profile-content h1 {
-        /* background: none; */
         text-transform: uppercase;
         font-size: 1.8em;
-        /* position: relative; */
         margin: 0;
         padding: 0;
-        /* position: relative; */
     }
 
     .homePage .profile-content h1::after {
@@ -160,7 +142,6 @@
     }
 
     .homePage .profile-content p {
-        /* background: none; */
         width: 80%;
     }
 
@@ -185,18 +166,11 @@
     .homePage .profile-content .box-wrapper {}
 
     .homePage .profile-content .titel {
-        /* background: #000000;
-        margin: 0; */
-        /* display: inline-block; */
-        /* background: none; */
 
     }
 
     .homePage .profile-content h1 {
-        /* background: #000000; */
-        /* font-size: 1.3em;
-        margin: 0; */
-        /* background: none; */
+        background: none;
         font-size: 3em;
 
     }
@@ -206,10 +180,8 @@
     }
 
     .homePage .profile-content p {
-        /* margin: 0; */
         font-size: 15px;
-        /* display: inline-block; */
-        /* background: #000000; */
+        background: none;
     }
    
 }
