--- a/src/components/app-pop-up/pop-up/pop-up.css
+++ b/src/components/app-pop-up/pop-up/pop-up.css
@@ -11,6 +11,8 @@
     justify-content: center;
     z-index: 999;
     background-color: rgba(0, 0, 0, .9);
+
+    animation: animate-fade-in 0.4s ease-in-out ;
 }
 
 .popup[data-dark=false] {
