--- a/src/components/forms/button/button.css
+++ b/src/components/forms/button/button.css
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: space-between;
     border-radius: 999px;
+    height: 50px;
     cursor: pointer;
     transition: all .3s linear;
 }
