--- a/src/components/add-review/add-review-button/add-review-button.css
+++ b/src/components/add-review/add-review-button/add-review-button.css
@@ -12,7 +12,7 @@
     border-radius: 0 100px 100px  0 ;
     transition: all 0.3s linear;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
     padding-right: 5px;
     animation: animate-slide-left 0.7s ease-in-out ;
