--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,6 @@
   --green: #6be89b;
   --green: #6be89b;
   --shadow: #dedede;
-  /* --dark: #111111; */
   --dark: #000000;
   --dark-light: #2b2a2a;
   --dark-light2: #666;
@@ -23,40 +22,40 @@
   box-sizing: border-box;
 }
 
+html,
 body {
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-
 }
+
 
 .pageContainer {
   width: 100%;
 }
 
-.pageContainer>.titelWrapper {
-  margin: 0 auto;
+.pageContainer>.titleWrapper{
+  margin: 0px auto;
   width: 100%;
   position: relative;
-  padding: 80px 0;
+  padding: 80px 0px;
   text-align: center;
 }
 
-.pageContainer>.titelWrapper h1 {
+.pageContainer>.titleWrapper h1{
   font-size: 56px;
   font-weight: 900 !important;
   text-transform: uppercase;
-  margin: 0;
-
+  margin: 0px;
 }
 
-.pageContainer>.titelWrapper h1>span {
+.pageContainer>.titleWrapper h1 > span {
   color: var(--warning);
 }
 
-.pageContainer>.titelWrapper .backgroundTitel {
+.pageContainer>.titleWrapper .backgroundTitel {
   font-size: 110px;
   left: 0;
   letter-spacing: 10px;
@@ -95,22 +94,22 @@ body {
 
 @media only screen and (max-width: 600px) {
 
-  .pageContainer>.titelWrapper {
+  .pageContainer>.titleWrapper {
     padding-left: 15px;
     padding-right: 15px;
     padding: 60px 0;
-    text-align: start;
+    /* text-align: start; */
   }
 
-  .pageContainer>.titelWrapper h1 {
+  .pageContainer>.titleWrapper h1 {
     font-size: 35px !important;
   }
 
-  .pageContainer>.titelWrapper h1>span {
+  .pageContainer>.titleWrapper h1>span {
     color: var(--warning);
   }
 
-  .pageContainer>.titelWrapper .backgroundTitel {
+  .pageContainer>.titleWrapper .backgroundTitel {
     font-size: 45px;
     transform: translateY(-20%);
   }
