--- a/src/sections/portfolio/portfolio.css
+++ b/src/sections/portfolio/portfolio.css
@@ -1,6 +1,6 @@
 .portfolioPage{
     padding-bottom:100px ;
-    animation: animate-fade-top 0.7s ease-in-out ;
+    /* animation: animate-fade-top 0.7s ease-in-out ; */
 }
 
 .portfolioPage .portfolioPage-body{
@@ -21,12 +21,22 @@
 }
 
 @media screen and (max-width: 990px) {
+    .portfolioPage {
+        padding-bottom: 0px;
+    }
+    
     .portfolioPage .portfolioPage-body{
         grid-template-columns: repeat(2 , 15rem);
         gap: 20px;
     }
 }
+
 @media screen and (max-width: 600px) {
+
+    .portfolioPage .titleWrapper{
+        /* text-align: center; */
+    }
+
     .portfolioPage .portfolioPage-body{
         grid-template-columns: 1fr;   
         gap: 30px;     
