--- a/src/sections/home/home.css
+++ b/src/sections/home/home.css
@@ -122,7 +122,8 @@
 }
 
 .homePage .profile-content .more-about-btn {
-    margin-top: 20px;
+    /* margin-top: 20px; */
+    margin-top: 2.5rem;
 }
 
 @media only screen and (min-width: 1400px) {
